--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,7 +1,7 @@
 form {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
+  padding: 5rem 1rem 1rem 1rem;
   margin: auto;
   max-width: 600px;
 }
