--- a/src/index.css
+++ b/src/index.css
@@ -1,60 +1,62 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;300;400;500;600;700;800&display=swap');
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Outfit', 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background-color: #000000;
+  font-family: 'Outfit', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
+    'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #000000;
 }
 
-h1, h4, p, a {
-    color: #ffffff;
+h1,
+h4,
+p,
+a {
+  color: #ffffff;
 }
 
 h1 {
-    font-size: 2.4rem;
+  font-size: 2.4rem;
 }
 
 p {
-    font-size: 1.4rem;
+  font-size: 1.4rem;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .btn {
-    padding: 12px 32px;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    background-color: transparent;
-    color: #ffffff;
-    border: 1px solid #ffffff;
-    cursor: pointer;
+  padding: 12px 32px;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  background-color: transparent;
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  cursor: pointer;
 }
 
 .btn-light {
-    background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 .btn:hover {
-    background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
-@media screen and (max-width:640px) {
-    h1 {
-        font-size: 2rem;
-    }
+@media screen and (max-width: 640px) {
+  h1 {
+    font-size: 2rem;
+  }
 }
