--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,4 +1,6 @@
 .header {
+  font-family: 'Outfit';
+  letter-spacing: 0.03em;
   position: fixed;
   width: 100%;
   display: flex;
@@ -15,6 +17,7 @@
 }
 
 #logo-company {
+  font-family: 'Montserrat', sans-serif;
   font-size: 2.5rem;
   font-weight: 600;
 }
@@ -28,7 +31,8 @@
 }
 
 .nav-menu a {
-  font-size: 1.2rem;
+  font-size: 1.18rem;
+  letter-spacing: 0.04em;
   font-weight: 500;
   text-transform: uppercase;
 }
@@ -70,6 +74,8 @@
     padding: 1rem 0;
   }
   .nav-menu a {
+    font-family: 'Playfair Display', serif;
+    letter-spacing: 0.05rem;
     font-size: 2rem;
   }
 }
