--- a/src/components/PricingSection.css
+++ b/src/components/PricingSection.css
@@ -7,7 +7,7 @@
 .card-container {
   max-width: 1140px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, minmax(330px, 1fr));
   grid-gap: 40px;
   margin: 0 auto;
 }
@@ -18,7 +18,6 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 .card:hover {
@@ -26,14 +25,12 @@
 }
 
 .card-title {
-  font-size: 1.3rem;
   font-weight: 400;
-  color: #ffffff;
   text-transform: uppercase;
-  letter-spacing: 0.03em;
 }
 
 .card p {
+  line-height: 1.3;
   font-weight: 300;
   padding: 0.5rem 0 0.5rem 1.5rem;
   text-align: left;
@@ -48,8 +45,12 @@
   color: #ffffff;
 }
 
+.card p:last-of-type {
+  margin-bottom: 3rem;
+}
+
 .card .btn {
-  margin: 2rem auto;
+  margin: auto auto 2rem;
   display: block;
   width: 80%;
   color: #ffffff;
@@ -62,10 +63,32 @@
   display: block;
 }
 
+@media screen and (max-width: 1220px) {
+  .card-container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-flow: row;
+  }
+
+  .card p {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .card-container {
+    grid-template-columns: 1fr;
+  }
+}
+
 @media screen and (max-width: 640px) {
   .card-container {
     grid-template-columns: 1fr;
     margin: 0 auto;
-    max-width: 90%;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  .card p {
+    font-size: 1rem;
   }
 }
