--- a/src/components/TrainingSectin.css
+++ b/src/components/TrainingSectin.css
@@ -2,18 +2,25 @@
   width: 100%;
   margin: 5rem 0 3rem 0;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, minmax(320px, 800px));
   height: 100%;
 }
 
 .training-left {
-  text-align: center;
   padding: 1rem 4rem;
-  max-width: 680px;
+}
+
+.training-left h2 {
+  margin-bottom: 2rem;
 }
 
 .training-left p {
   margin: 1.2rem 0;
+  line-height: 1.3;
+}
+
+.training-btn {
+  margin-top: 2rem;
 }
 
 .training-right {
@@ -58,7 +65,23 @@
     grid-template-columns: 1fr;
   }
 
+  .training-left {
+    margin-bottom: 3rem;
+  }
+
   .training-right img {
     max-width: 80%;
+  }
+}
+
+@media screen and (max-width: 678px) {
+  .training-left {
+    padding: 1rem 2rem;
+  }
+}
+
+@media screen and (max-width: 458px) {
+  .training-left {
+    padding: 1rem 1.3rem;
   }
 }
