--- a/src/components/Video.css
+++ b/src/components/Video.css
@@ -22,27 +22,57 @@
 }
 
 .hero .content h1 {
-  font-size: 4rem;
+  margin-bottom: 1.4rem;
+  padding: 0 1.1rem;
 }
 
 .hero .content p {
-  font-size: 1.8rem;
+  margin-bottom: 4.5rem;
+  padding: 0 1.1rem;
+  font-family: 'Playfair Display', serif;
+  font-size: 1.5rem;
   font-weight: 200;
+  line-height: 1.3;
+  letter-spacing: 0.06em;
   text-transform: uppercase;
-  margin-bottom: 1.6rem;
 }
 
 .hero .btn {
   margin: 1rem 0.2rem;
 }
 
-@media screen and (max-width: 640px) {
-  .content h1 {
+@media screen and (max-width: 992px) {
+  .hero .content h1 {
     font-size: 3rem;
   }
 
-  .content p {
+  .hero .content p {
     font-size: 1.4rem;
-    margin-bottom: 1.6rem;
+    margin-bottom: 4rem;
+  }
+}
+
+@media screen and (max-width: 678px) {
+  .hero .content h1 {
+    font-size: 2.4rem;
+  }
+
+  .hero .content p {
+    font-size: 1.2rem;
+    margin-bottom: 3rem;
+    font-weight: 300;
+  }
+}
+@media screen and (max-width: 678px) {
+  .hero .content h1 {
+    font-size: 2rem;
+  }
+
+  .hero .content p {
+    font-size: 1rem;
+    margin-bottom: 3rem;
+  }
+  .hero .btn {
+    padding: 10px 30px;
   }
 }
