--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -1,4 +1,4 @@
-form {
+.form {
   display: flex;
   flex-direction: column;
   padding: 5rem 1rem 1rem 1rem;
@@ -6,14 +6,17 @@ form {
   max-width: 600px;
 }
 
-form label {
-  margin-bottom: 0.5rem;
+.form label {
+  display: block;
   color: #ffffff;
-  letter-spacing: 0.05em;
+  letter-spacing: 0.08em;
 }
 
-input,
-textarea {
+.form input,
+.form textarea {
+  display: block;
+  width: 100%;
+  margin-top: 0.5rem;
   margin-bottom: 1rem;
   padding: 10px;
   font-size: 1.2rem;
@@ -22,4 +25,10 @@ textarea {
   border: 1px solid #454545;
   font-family: 'Outfit', sans-serif;
   color: #f4f4f4;
+}
+
+.input-error {
+  margin: -0.8rem auto 1.1rem;
+  font-size: 1.1rem;
+  color: rgb(201, 35, 35);
 }
