--- a/src/components/Training/Training.css
+++ b/src/components/Training/Training.css
@@ -1,4 +1,4 @@
-.pricing {
+.training {
   width: 100%;
   padding: 6rem 1rem;
   background-color: #020202;
@@ -25,8 +25,13 @@
 }
 
 .card-title {
+  letter-spacing: 0.07em;
   font-weight: 400;
   text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 3rem;
 }
 
 .card p {
