--- a/src/components/Video/Video.css
+++ b/src/components/Video/Video.css
@@ -12,6 +12,27 @@
   object-fit: contain;
 }
 
+.main-img {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: url(./../../assets/main.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  z-index: -2;
+}
+
+.main-img:before {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.438);
+  content: '';
+}
+
 .hero .content {
   text-align: center;
   position: absolute;
